--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "express": "^4.17.1",
+    "jso": "^4.1.1",
+    "json": "^9.0.6",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
