need to unhardcode the auth token lol

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "jso": "^4.1.1",
     "json": "^9.0.6",
+    "postman-request": "^2.88.1-postman.18",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
